@@ -28,8 +28,8 @@ import static org.apache.jackrabbit.oak.plugins.index.IndexConstants.REINDEX_COU
 import static org.apache.jackrabbit.oak.plugins.index.IndexUtils.createIndexDefinition;
 import static org.apache.jackrabbit.oak.plugins.memory.PropertyStates.createProperty;
 import static org.hamcrest.CoreMatchers.containsString;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
 
 import javax.jcr.query.Query;
 
@@ -51,8 +51,8 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Lists;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Tests indexing and queries when using the composite node store.
@@ -70,12 +70,10 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
         NodeBuilder b;
         NodeBuilder readOnlyBuilder = readOnlyStore.getRoot().builder();
         b = createIndexDefinition(readOnlyBuilder.child(INDEX_DEFINITIONS_NAME), "foo",
-                true, false, ImmutableSet.of("foo"), null);
-        b.setProperty("excludedPaths", "/jcr:system");
+                true, false, Set.of("foo"), null);
         NodeBuilder globalBuilder = globalStore.getRoot().builder();
         b = createIndexDefinition(globalBuilder.child(INDEX_DEFINITIONS_NAME), "foo",
-                true, false, ImmutableSet.of("foo"), null);
-        b.setProperty("excludedPaths", "/jcr:system");
+                true, false, Set.of("foo"), null);
         EditorHook hook = new EditorHook(
                 new IndexUpdateProvider(new PropertyIndexEditorProvider().with(mip)));
         readOnlyStore.merge(readOnlyBuilder, hook, CommitInfo.EMPTY);
@@ -99,7 +97,7 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
         qe = root.getQueryEngine();
         assertThat(
                 executeQuery("explain /jcr:root//*[@foo = 'bar']", "xpath", false).toString(),
-                containsString("/* property foo = bar"));
+                containsString("/oak:index/foo"));
         assertEquals("[/readOnly/node-0, /readOnly/node-1, /readOnly/node-2]",
                 executeQuery("/jcr:root//*[@foo = 'bar']", "xpath").toString());
 
@@ -116,7 +114,7 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
                 "/readOnly/node-0, /readOnly/node-1, /readOnly/node-2]",
                 executeQuery("/jcr:root//*[@foo = 'bar']", "xpath").toString());
         assertThat(executeQuery("explain /jcr:root/content//*[@foo = 'bar']", "xpath", false).toString(),
-                containsString("/* property foo = bar"));
+                containsString("/oak:index/foo"));
 
         // remove all data
         builder = store.getRoot().builder();
@@ -170,7 +168,7 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
         qe = root.getQueryEngine();
         assertThat(executeQuery("explain select * from [nt:base] " +
                 "where property([*], 'Reference') = cast('u1' as reference)", Query.JCR_SQL2, false).toString(),
-                containsString("/* reference "));
+                containsString("/* reference"));
         // expected: also /readOnly/node-0 .. 2
         assertEquals("[/a/x, /readOnly/node-0, /readOnly/node-1, /readOnly/node-2]",
                 executeQuery("select [jcr:path] from [nt:base] " +
@@ -184,8 +182,7 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
         b.setProperty(TYPE_PROPERTY_NAME, LuceneIndexConstants.TYPE_LUCENE);
         b.setProperty(FulltextIndexConstants.COMPAT_MODE, IndexFormatVersion.V2.getVersion());
         b.setProperty(IndexConstants.ASYNC_PROPERTY_NAME,
-                Lists.newArrayList("async", "nrt"), Type.STRINGS);
-        b.setProperty("excludedPaths", "/jcr:system");
+                List.of("async", "nrt"), Type.STRINGS);
         NodeBuilder foo = b.child(FulltextIndexConstants.INDEX_RULES)
                 .child("nt:base")
                 .child(FulltextIndexConstants.PROP_NODE)
@@ -268,7 +265,7 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
 
         assertThat(
                 executeQuery("explain /jcr:root//*[@asyncFoo = 'bar']", "xpath", false).toString(),
-                containsString("/* lucene:lucene(/oak:index/lucene) asyncFoo:bar"));
+                containsString("/oak:index/lucene"));
         assertEquals("[/readOnly/node-0, /readOnly/node-1, /readOnly/node-2]",
                 executeQuery("/jcr:root//*[@asyncFoo = 'bar']", "xpath").toString());
 
@@ -283,7 +280,7 @@ public class CompositeNodeStoreQueryTest extends CompositeNodeStoreQueryTestBase
         // run a query
         assertThat(
                 executeQuery("explain /jcr:root//*[@asyncFoo = 'bar']", "xpath", false).toString(),
-                containsString("/* lucene:lucene(/oak:index/lucene) asyncFoo:bar"));
+                containsString("/oak:index/lucene"));
         assertEquals("[/content/node-0, /content/node-1, /content/node-2, " +
                 "/readOnly/node-0, /readOnly/node-1, /readOnly/node-2]",
                 executeQuery("/jcr:root//*[@asyncFoo = 'bar']", "xpath").toString());
